--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node: [12, 13, 14]
+        node: [12, 14]
 
     steps:
       - name: Checkout repo
